flutter/packages/bonsai_flutter_native/lib/bonsai_flutter_native_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Uint16 Function()>()
external int bf_abi_version_major();

@ffi.Native<ffi.Uint16 Function()>()
external int bf_abi_version_minor();

@ffi.Native<ffi.Uint16 Function()>()
external int bf_protocol_version_major();

@ffi.Native<ffi.Uint16 Function()>()
external int bf_protocol_version_minor();

@ffi.Native<
  ffi.Pointer<bf_runtime> Function(ffi.Pointer<ffi.Uint8>, ffi.Size)
>()
external ffi.Pointer<bf_runtime> bf_runtime_create(
  ffi.Pointer<ffi.Uint8> config,
  int config_length,
);

@ffi.Native<
  bf_status Function(
    ffi.Pointer<bf_runtime>,
    ffi.Int64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<bf_output_buffer>,
  )
>()
external int bf_runtime_pump(
  ffi.Pointer<bf_runtime> runtime,
  int monotonic_now_ns,
  ffi.Pointer<ffi.Uint8> input,
  int input_length,
  ffi.Pointer<bf_output_buffer> output,
);

@ffi.Native<
  bf_status Function(
    ffi.Pointer<bf_runtime>,
    ffi.Uint64,
    ffi.Uint64,
    ffi.Int64,
    ffi.Pointer<bf_output_buffer>,
  )
>()
external int bf_runtime_presentation_succeeded(
  ffi.Pointer<bf_runtime> runtime,
  int presentation_id,
  int revision,
  int monotonic_now_ns,
  ffi.Pointer<bf_output_buffer> output,
);

@ffi.Native<
  bf_status Function(
    ffi.Pointer<bf_runtime>,
    ffi.Uint64,
    ffi.Uint64,
    ffi.Int32,
    ffi.Pointer<bf_output_buffer>,
  )
>()
external int bf_runtime_presentation_rejected(
  ffi.Pointer<bf_runtime> runtime,
  int presentation_id,
  int revision,
  int rejection_reason,
  ffi.Pointer<bf_output_buffer> output,
);

@ffi.Native<
  bf_status Function(ffi.Pointer<bf_runtime>, ffi.Pointer<bf_output_buffer>)
>()
external int bf_runtime_get_last_error(
  ffi.Pointer<bf_runtime> runtime,
  ffi.Pointer<bf_output_buffer> output,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<bf_runtime>, ffi.Pointer<ffi.Uint8>)
>()
external void bf_buffer_free(
  ffi.Pointer<bf_runtime> runtime,
  ffi.Pointer<ffi.Uint8> data,
);

@ffi.Native<ffi.Size Function(ffi.Pointer<bf_runtime>)>()
external int bf_runtime_outstanding_buffers(ffi.Pointer<bf_runtime> runtime);

@ffi.Native<ffi.Void Function(ffi.Pointer<bf_runtime>)>()
external void bf_runtime_destroy(ffi.Pointer<bf_runtime> runtime);

final class bf_runtime extends ffi.Opaque {}

typedef bf_status = ffi.Int32;
typedef Dartbf_status = int;
typedef bf_error_code = ffi.Int32;
typedef Dartbf_error_code = int;

final class bf_output_buffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int length;

  @ffi.Uint64()
  external int presentation_id;

  @ffi.Uint64()
  external int revision;

  @bf_status()
  external int status;

  @bf_error_code()
  external int error_code;
}

const int BF_STATUS_OK = 0;

const int BF_STATUS_RECOVERABLE_ERROR = 1;

const int BF_STATUS_FATAL_ERROR = 2;

const int BF_ERROR_NONE = 0;

const int BF_ERROR_PROTOCOL = 1;

const int BF_ERROR_REVISION_MISMATCH = 2;

const int BF_ERROR_DUPLICATE_KEY = 3;

const int BF_ERROR_UNSUPPORTED_NODE_KIND = 4;

const int BF_ERROR_INVALID_PROP = 5;

const int BF_ERROR_HANDLER_MISSING = 6;

const int BF_ERROR_STALE_EVENT = 7;

const int BF_ERROR_HOST_EFFECT_FAILURE = 8;

const int BF_ERROR_OCAML_EXCEPTION = 9;

const int BF_ERROR_DART_RENDERER_EXCEPTION = 10;

const int BF_ERROR_LIFECYCLE_EXCEPTION = 11;

const int BF_ERROR_NATIVE_LIBRARY_LOADING_ERROR = 12;

const int BF_ERROR_INVALID_PRESENTATION = 13;

const int BF_ERROR_INVALID_MONOTONIC_TIME = 14;

const int BF_ERROR_INVALID_SCHEDULER_STATE = 15;

const int BF_REJECTION_DECODE_FAILED = 0;

const int BF_REJECTION_FRAME_VALIDATION_FAILED = 1;

const int BF_REJECTION_RENDERER_EPOCH_MISMATCH = 2;

const int BF_REJECTION_RENDERER_REVISION_MISMATCH = 3;
